# shotover-proxy

./: .context.md  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  changelog.md  cliff.toml  deny.toml  mkdocs.yml  netlify.toml  requirements.txt  run-test-in-docker.sh  rust-toolchain.toml  rustfmt.toml
aws-throwaway/: Cargo.toml  readme.md
aws-throwaway/examples/: aws-throwaway-test.rs  create-instance.rs
aws-throwaway/src/: ec2_instance.rs  iam.rs  lib.rs  ssh.rs
cqlparser/: Cargo.toml
cqlparser/benches/: benches.rs
cqlparser/src/: ast.rs  lib.rs
cqlparser/src/parser/: insert.rs  mod.rs  select.rs
cqlparser/tests/: test.rs  tests.rs
cqlparser/tests/combined/: mod.rs
cqlparser/tests/insert/: mod.rs
cqlparser/tests/select/: mod.rs
custom-transforms-example/: Cargo.toml
custom-transforms-example/config/: docker-compose.yaml  topology.yaml
custom-transforms-example/src/: main.rs  redis_get_rewrite.rs  valkey_get_rewrite.rs
custom-transforms-example/tests/: test.rs
ec2-cargo/: Cargo.toml  readme.md
ec2-cargo/src/: cli.rs  instance.rs  main.rs
redis-get-rewrite/: Cargo.toml
shotover/: Cargo.toml
shotover-proxy/: Cargo.toml  build.rs
shotover-proxy/benches/: cassandra_benches.rs  chain_benches.rs  codec_benches.rs  helpers.rs  mod.rs  redis_benches.rs
shotover-proxy/benches/benches/: cassandra.rs  chain.rs  codec.rs  main.rs  redis.rs
shotover-proxy/benches/windsock/: cassandra.rs  common.rs  kafka.rs  main.rs  profilers.rs  readme.md  redis.rs  shotover.rs
shotover-proxy/config/: config.yaml  topology.yaml
shotover-proxy/example-configs-docker/cassandra-peers-rewrite/: docker-compose.yaml  docker-compose.yml  topology.yaml
shotover-proxy/example-configs-docker/cassandra-rewrite-peers/: topology.yaml
shotover-proxy/example-configs-docker/redis-cluster/: docker-compose.yaml  docker-compose.yml
shotover-proxy/example-configs-docker/redis-cluster-ports-rewrite/: docker-compose.yaml  docker-compose.yml  topology.yaml
shotover-proxy/example-configs/cassandra-cluster/: docker-compose-cassandra-v3.yaml  docker-compose-cassandra-v3.yml  docker-compose-cassandra-v4.yml  topology-dummy-peers-v3.yaml  topology-dummy-peers-v4.yaml  topology-dummy-peers.yaml  topology-v3.yaml  topology-v4.yaml  topology.yaml
shotover-proxy/example-configs/cassandra-cluster-multi-rack/: docker-compose.yaml  docker-compose.yml  topology_rack1.yaml  topology_rack2.yaml  topology_rack3.yaml
shotover-proxy/example-configs/cassandra-cluster-tls/: docker-compose.yaml  docker-compose.yml  topology.yaml
shotover-proxy/example-configs/cassandra-cluster-v3/: docker-compose.yaml
shotover-proxy/example-configs/cassandra-cluster-v4/: docker-compose.yaml  topology-encode.yaml
shotover-proxy/example-configs/cassandra-passthrough/: docker-compose.yml  topology-encode.yaml  topology.yaml
shotover-proxy/example-configs/cassandra-passthrough-tls/: topology.yaml
shotover-proxy/example-configs/cassandra-protect-aws/: docker-compose.yml  topology.yaml
shotover-proxy/example-configs/cassandra-protect-local/: topology.yaml
shotover-proxy/example-configs/cassandra-redis-cache/: docker-compose.yaml  docker-compose.yml  topology.yaml
shotover-proxy/example-configs/cassandra-request-throttling/: docker-compose.yml  topology.yaml
shotover-proxy/example-configs/cassandra-rewrite-peers/: docker-compose.yml  topology.yaml
shotover-proxy/example-configs/cassandra-throttle/: topology.yaml
shotover-proxy/example-configs/cassandra-tls/: docker-compose.yaml  docker-compose.yml  topology-with-key.yaml  topology.yaml
shotover-proxy/example-configs/null-cassandra/: topology.yaml
shotover-proxy/example-configs/null-redis/: topology.yaml
shotover-proxy/examples/: cassandra_bench.rs  cassandra_bench_mocked.rs  cassandra_cluster_bench.rs  cassandra_cluster_flamegraph.rs  cassandra_flamegraph.rs  kafka_bench.rs  kafka_flamegraph.rs  read.rn
shotover-proxy/src/: lib.rs  main.rs  runner.rs  server.rs  tcp.rs  tls.rs
shotover-proxy/src/admin/: httpserver.rs  (+1 more)
shotover-proxy/tests/: lib.rs  redis_presence_integration.rs  test_examples.rs
shotover-types/: Cargo.toml
shotover-types/src/: lib.rs  message.rs  protocols.rs
shotover/src/: connection.rs  connection_span.rs  error.rs  hot_reload.rs  hot_reload_client.rs  hot_reload_server.rs  http.rs  lib.rs  message_value.rs  runner.rs  server.rs  source_task.rs  tcp.rs  tls.rs  tlsls.rs  tracing_panic_handler.rs  unix_socket_server.rs
shotover_data_protection/: Cargo.toml
shotover_data_protection/src/: lib.rs
shotover_protocols/: Cargo.toml
shotover_protocols/src/: cassandra_protocol2.rs  lib.rs  redis_codec.rs
shotover_redis_transforms/: Cargo.toml
shotover_redis_transforms/src/: lib.rs  redis_cache.rs  redis_cluster.rs  redis_codec_destination.rs  timestamp_tagging.rs
shotover_scripts/: Cargo.toml
shotover_scripts/src/: lib.rs  lua.rs
shotover_transforms/: Cargo.toml
shotover_transforms/src/: ast.rs  chain.rs  lib.rs
shotover_util_transforms/: Cargo.toml
shotover_util_transforms/src/: coalesce.rs  filter.rs  kafka_destination.rs  lib.rs  load_balance.rs  mpsc.rs  noop.rs  null.rs  parallel_map.rs  query_counter.rs  sampler.rs  test_transforms.rs
test-helpers/: Cargo.toml
test-helpers/src/: bench.rs  cert.rs  docker_compose.rs  docker_compose_runner.rs  flamegraph.rs  kafka_producer_perf_test.rs  latte.rs  lazy.rs  lib.rs  metrics.rs  mock_cassandra.rs  shotover_process.rs  test_tracing.rs
tokio-bin-process/: Cargo.toml  readme.md
tokio-bin-process/src/: event.rs  event_matcher.rs  lib.rs  process.rs
wasm-transform/: Cargo.toml
wasm-transform/src/: lib.rs
website/: Cargo.toml  readme.md
website/assets/: style.css
website/src/: cli.rs  docs.rs  main.rs  version_tags.rs
website/templates/: base.html  docs.html  landing.html
windsock/: Cargo.toml  readme.md
windsock/examples/: cassandra-docker-compose.yaml  cassandra.rs
windsock/src/: bench.rs  cli.rs  cloud.rs  data.rs  filter.rs  lib.rs  list.rs  report.rs  tables.rs
(+983 files in other folders)
