[workspace]
members = [
    "shotover",
    "shotover-proxy",
    "test-helpers",
    "custom-transforms-example",
    "ec2-cargo",
    "windsock-cloud-docker",
    "website",
]
resolver = "2"

# https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1

# used for e.g. generating flamegraphs
[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
scylla = { version = "0.15.0", features = ["ssl"] }
bytes = { version = "1.0.0", features = ["serde"] }
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
tokio-openssl = "0.6.2"
itertools = "0.14.0"
openssl = { version = "0.10.70", features = ["vendored"] }
anyhow = "1.0.76"
serde = { version = "1.0.111", features = ["derive"] }
serde_yaml = "0.9.17"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
reqwest = "0.12.0"
redis = { version = "0.24.0", features = ["tokio-comp", "cluster"] }
cdrs-tokio = "8.0"
cassandra-protocol = "3.0"
# https://docs.rs/tracing/latest/tracing/level_filters/index.html#compile-time-filters
# `trace` level is considered development only, and may contain sensitive data, do not include it in release builds.
tracing = { version = "0.1.15", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
tracing-appender = "0.2.0"
serde_json = "1.0"
rcgen = "0.13.0"
subprocess = "0.2.7"
chacha20poly1305 = { version = "0.10.0", features = ["std"] }
csv = "1.2.0"
redis-protocol = { version = "6.0.0", features = ["bytes"] }
bincode = "1.3.1"
futures = "0.3"
hex = "0.4.3"
hex-literal = "0.4.1"
rand = { version = "0.8.4", default-features = false }
clap = { version = "4.0.4", features = ["cargo", "derive"] }
async-trait = "0.1.30"
typetag = "0.2.5"
aws-throwaway = { version = "0.6.0", default-features = false }
tokio-bin-process = "0.7.0"
ordered-float = { version = "4.0.0", features = ["serde"] }
shell-quote = { default-features = false, features = ["bash"], version = "0.7.0" }
pretty_assertions = "1.4.0"
