[workspace]
members = [
    "shotover",
    "shotover-proxy",
    "test-helpers",
    "custom-transforms-example",
    "ec2-cargo",
    "windsock-cloud-docker",
    "website",
]
resolver = "2"

# https://deterministic.space/high-performance-rust.html
[profile.release]
lto = "fat"
codegen-units = 1

# used for e.g. generating flamegraphs
[profile.profiling]
inherits = "release"
debug = true

[workspace.dependencies]
scylla = { version = "1.2.0", features = ["openssl-010"] }
bytes = { version = "1.10.1", features = ["serde"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
itertools = "0.14.0"
openssl = { version = "0.10.73", features = ["vendored"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.20", default-features = false, features = ["http2"] }
redis = { version = "0.29.5", features = ["tokio-comp", "tokio-rustls-comp", "tls-rustls-insecure", "cluster"] }
cdrs-tokio = "8.1"
cassandra-protocol = "3.3"
# https://docs.rs/tracing/latest/tracing/level_filters/index.html#compile-time-filters
# `trace` level is considered development only, and may contain sensitive data, do not include it in release builds.
tracing = { version = "0.1.41", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
serde_json = "1.0"
rcgen = { version = "0.13.2", default-features = false, features = ["pem", "aws_lc_rs"] }
subprocess = "0.2.9"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
csv = "1.3.1"
redis-protocol = { version = "6.0.0", features = ["bytes"] }
bincode = { version = "2.0.1", features = ["serde", "std"], default-features = false }
futures = "0.3"
hex = "0.4.3"
hex-literal = "1.0.0"
rand = { version = "0.9.1", default-features = false }
clap = { version = "4.5.40", features = ["cargo", "derive"] }
async-trait = "0.1.88"
typetag = "0.2.20"
aws-throwaway = { version = "0.6.6", default-features = false }
tokio-bin-process = "0.7.0"
ordered-float = { version = "5.0.0", features = ["serde"], default-features = false }
shell-quote = { default-features = false, features = ["bash"], version = "0.7.2" }
pretty_assertions = "1.4.1"
