[package]
name = "cqlparser"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"

[dev-dependencies]
criterion = { git = "https://github.com/shotover/criterion.rs", branch = "version-0.4", version = "0.3" }

[[bench]]
name = "benches"
harness = false
