[package]
name = "custom-transforms-example"
version = "0.0.1"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shotover-proxy = { path = "../shotover-proxy" }
anyhow = "1.0"
clap = "4.0.4"
serde = "1.0"
async-trait = "0.1.30"
tracing = "0.1"
typetag = "0.2.6"

[dev-dependencies]
tokio = "1.25.0"
test-helpers = {path = "../test-helpers"}
redis = "0.22.0"
