[package]
name = "custom-transforms-example"
version = "0.0.1"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shotover = { path = "../shotover", default-features = false}
anyhow.workspace = true
serde.workspace = true
async-trait.workspace = true
tracing.workspace = true
typetag.workspace = true


[dev-dependencies]
test-helpers = {path = "../test-helpers"}
tokio.workspace = true
redis.workspace = true
pretty_assertions.workspace = true

[features]
valkey = ["shotover/valkey"]
default = ["valkey"]

[[test]]
name = "test"
required-features = ["valkey"]
