[package]
name = "shotover-proxy"
version = "0.1.10"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shotover = { path = "../shotover" }

[dev-dependencies]
scylla = "0.8.1"
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
criterion = { version = "0.5.0", features = ["async_tokio"] }
serial_test = "2.0.0"
rstest = "0.18.0"
cassandra-cpp = { version = "2.0.0" }
test-helpers = { path = "../test-helpers" }
#rdkafka = { version = "0.32", features = ["cmake-build"] }
rdkafka = { branch = "updating_librdkafka_to_v2.1.1", git = "https://github.com/shotover/rust-rdkafka", features = ["cmake-build"] }
redis.workspace = true
chacha20poly1305.workspace = true
serde.workspace = true
csv.workspace = true
uuid.workspace = true
itertools.workspace = true
nix.workspace = true
cdrs-tokio.workspace = true
redis-protocol.workspace = true
tokio-util.workspace = true
bincode.workspace = true
futures.workspace = true
hex.workspace = true
hex-literal.workspace = true
cassandra-protocol.workspace = true
bytes.workspace = true
rand.workspace = true
rand_distr.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2.0"
async-once-cell = "0.5.2"
fred = { version = "6.3.0", features = ["enable-rustls"] }
tokio-bin-process = "0.2.0"
rustls-pemfile = "1.0.2"
aws-throwaway = { path = "../aws-throwaway"}
windsock = { path = "../windsock" }
regex = "1.7.0"
cql-ws = { git = "https://github.com/conorbros/cql-ws" }

[[bench]]
name = "benches"
harness = false

[features]
# Include WIP alpha transforms in the public API
alpha-transforms = ["shotover/alpha-transforms"]
cassandra-cpp-driver-tests = ["test-helpers/cassandra-cpp-driver-tests"]
