[package]
name = "shotover-proxy"
version = "0.4.1"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shotover = { path = "../shotover", default-features = false}

[dev-dependencies]
prometheus-parse = "0.2.4"
reqwest.workspace = true
scylla.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
clap.workspace = true
rstest = "0.22.0"
rstest_reuse = "0.7.0"
cassandra-cpp = { version = "3.0.0", default-features = false }
test-helpers = { path = "../test-helpers" }
redis.workspace = true
chacha20poly1305.workspace = true
serde.workspace = true
csv.workspace = true
uuid.workspace = true
itertools.workspace = true
cdrs-tokio.workspace = true
redis-protocol.workspace = true
tokio-util.workspace = true
bincode.workspace = true
futures.workspace = true
hex.workspace = true
hex-literal.workspace = true
cassandra-protocol.workspace = true
bytes.workspace = true
rand.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
fred = { version = "9.0.3", features = ["enable-rustls-ring"] }
tokio-bin-process.workspace = true
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.1.0"
aws-throwaway.workspace = true
windsock = "0.1.0"
regex = "1.7.0"
opensearch = { version = "2.1.0", default-features = false, features = ["rustls-tls"] }
serde_json = "1.0.103"
time = { version = "0.3.25" }
shell-quote.workspace = true
pretty_assertions.workspace = true

[features]
# Include WIP alpha transforms in the public API
alpha-transforms = ["shotover/alpha-transforms"]
cassandra = ["shotover/cassandra"]
kafka = ["shotover/kafka"]
redis = ["shotover/redis"]
opensearch = ["shotover/opensearch"]
cassandra-cpp-driver-tests = ["test-helpers/cassandra-cpp-driver-tests"]
kafka-cpp-driver-tests = ["test-helpers/kafka-cpp-driver-tests"]
default = ["cassandra", "kafka", "redis", "opensearch"]

[[bench]]
name = "windsock"
harness = false
# windsock is dependent on the DebugForceEncode transform for the shotover=message-parsed benches.
# rather than manually adding #[cfg(feature = "alpha-transforms")] everywhere we just forbid compilation entirely without the alpha-transforms feature
required-features = ["alpha-transforms"]
