[package]
name = "shotover-proxy"
version = "0.6.0"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shotover = { path = "../shotover", default-features = false }
syslog = "^6.0"

[dev-dependencies]
prometheus-parse = "0.2.4"
reqwest.workspace = true
scylla.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
rstest = "0.24.0"
rstest_reuse = "0.7.0"
test-helpers = { path = "../test-helpers" }
redis.workspace = true
chacha20poly1305.workspace = true
serde.workspace = true
csv.workspace = true
uuid.workspace = true
itertools.workspace = true
cdrs-tokio.workspace = true
redis-protocol.workspace = true
bincode.workspace = true
futures.workspace = true
hex.workspace = true
cassandra-protocol.workspace = true
bytes.workspace = true
rand.workspace = true
async-trait.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
fred = { version = "10.0.0", features = ["enable-rustls-ring"] }
tokio-bin-process.workspace = true
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.1.0"
aws-throwaway.workspace = true
windsock = "0.2.0"
regex = "1.7.0"
opensearch = { version = "2.1.0", default-features = false, features = [
    "rustls-tls",
] }
serde_json = "1.0.103"
time = { version = "0.3.25" }
shell-quote.workspace = true
pretty_assertions.workspace = true

[features]
# Include WIP alpha transforms in the public API
alpha-transforms = ["shotover/alpha-transforms"]
cassandra = ["shotover/cassandra"]
kafka = ["shotover/kafka"]
valkey = ["shotover/valkey"]
opensearch = ["shotover/opensearch"]
cassandra-cpp-driver-tests = ["test-helpers/cassandra-cpp-driver-tests"]
kafka-cpp-driver-tests = ["test-helpers/kafka-cpp-driver-tests"]
default = ["cassandra", "kafka", "valkey", "opensearch"]

[[bench]]
name = "windsock"
harness = false
# windsock is dependent on the DebugForceEncode transform for the shotover=message-parsed benches.
# rather than manually adding #[cfg(feature = "alpha-transforms")] everywhere we just forbid compilation entirely without the alpha-transforms feature
required-features = ["alpha-transforms"]
