[package]
name = "shotover-types"
version = "0.0.21"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
thiserror = "1.0"
anyhow = "1.0.31"
bytes = "1.0.0"
cassandra-proto = { git = "https://github.com/benbromhead/cassandra-proto", branch = "move-to-bytes", features = ["v4"]}
redis-protocol = { git = "https://github.com/benbromhead/redis-protocol.rs", branch = "remove-parser" }
sqlparser = "= 0.5.0"
chrono = {version = "0.4.10",  features = ["serde"]}
itertools = "0.9.0"
