[package]
name = "shotover"
version = "0.7.1"
authors = ["Ben <ben@instaclustr.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/shotover/shotover-proxy"
description = "Shotover API for building custom transforms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Include WIP alpha transforms in the public API
alpha-transforms = []
cassandra = [
    "dep:cassandra-protocol",
    "dep:cql3-parser",
    "dep:lz4_flex",
    "dep:version-compare",
    "dep:hex",
]
kafka = [
    "dep:kafka-protocol",
    "dep:dashmap",
    "dep:xxhash-rust",
    "dep:base64",
    "dep:sasl",

]
valkey = ["dep:redis-protocol", "dep:csv", "dep:crc16"]
opensearch = ["dep:atoi", "dep:http", "dep:httparse"]
default = ["cassandra", "valkey", "kafka", "opensearch"]

[dependencies]
uds = { version = "0.4.2", features = ["tokio"] }
atomic_enum = "0.3.0"
axum = { version = "0.8", default-features = false, features = [
    "tokio",
    "tracing",
    "http1",
] }
pretty-hex = "0.4.0"
tokio-stream = "0.1.2"
derivative = "2.1.1"
governor = { version = "0.10", default-features = false, features = [
    "std",
    "quanta",
] }
nonzero_ext = "0.3.0"
version-compare = { version = "0.2", optional = true }
rand = { features = ["small_rng"], workspace = true }
lz4_flex = { version = "0.11.0", optional = true }
clap.workspace = true
itertools.workspace = true
bytes.workspace = true
futures.workspace = true
tokio = { version = "1.44.2", features = [
    "net",
    "parking_lot",
    "rt",
    "rt-multi-thread",
    "signal",
    "fs",
    "sync",
    "time",
] }
tokio-util.workspace = true
csv = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
async-trait.workspace = true
typetag.workspace = true
tokio-tungstenite = "0.27.0"

# Error handling
thiserror = "2.0"
anyhow.workspace = true
backtrace = "0.3.66"
backtrace-ext = "0.2"

# Parsers
cql3-parser = { version = "0.4.0", optional = true }
serde.workspace = true
serde_json = { workspace = true }
serde_yaml.workspace = true
num-bigint = { version = "0.4.0", features = ["serde"] }
uuid = { workspace = true }
bigdecimal = { version = "0.4.0", features = ["serde"] }
base64 = { version = "0.22.0", optional = true }
httparse = { version = "1.8.0", optional = true }
http = { version = "1.0.0", optional = true }

#Observability
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.17.0", default-features = false }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Transform dependencies
redis-protocol = { workspace = true, optional = true }
cassandra-protocol = { workspace = true, optional = true }
crc16 = { version = "0.4.0", optional = true }
ordered-float.workspace = true

#Crypto
kafka-protocol = { version = "0.15.1", optional = true, default-features = false, features = [
    "messages_enums",
    "broker",
    "client",
] }
rustls = { version = "0.23.24", default-features = false, features = ["tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = [
    "aws_lc_rs",
] }
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
xxhash-rust = { version = "0.8.6", features = ["xxh3"], optional = true }
dashmap = { version = "6.0.0", optional = true }
atoi = { version = "2.0.0", optional = true }
fnv = "1.0.7"
sasl = { version = "0.5.1", optional = true, default-features = false, features = [
    "scram",
] }

# Force C dependencies to be built in parallel e.g. ring has some C code it compiles with cc
# Remove this if we no longer have cc in our dep tree.
[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
criterion = { version = "2.6.0", features = [
    "async_tokio",
], package = "codspeed-criterion-compat" }
hex-literal.workspace = true
pretty_assertions.workspace = true

# TODO: Optionally compiling benches is quite tricky with criterion, maybe it would be easier with divan?
#       For now just set required features
[[bench]]
name = "benches"
harness = false
required-features = ["cassandra", "valkey", "kafka"]
