[package]
name = "shotover-data-protection"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
cached = "0.16.0"
bytes = "1.0.0"
async-trait = "0.1.30"
tracing = { version = "0.1.15", features = ["release_max_level_info"]}
typetag = "0.1.7"
dyn-clone = "1.0.4"

sodiumoxide = "0.2.5"
rusoto_kms = "0.46.0"
rusoto_signature = "0.46.0"

bincode = "1.3.1"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"


shotover-transforms = { path = "../shotover_transforms" }
