[package]
name = "shotover-protocols"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
async-trait = "0.1.30"
anyhow = "1.0.31"
serde = { version = "1.0.111", features = ["derive"] }
redis-protocol = { git = "https://github.com/benbromhead/redis-protocol.rs", branch = "remove-parser" }
cassandra-proto = { git = "https://github.com/benbromhead/cassandra-proto", branch = "move-to-bytes", features = ["v4"]}
shotover-transforms = {path = "../shotover_transforms"}
tokio-util = { version = "0.6.1", features = ["full"]}
tracing = { version = "0.1.15", features = ["release_max_level_info"]}
itertools = "0.9.0"
byteorder = "1.3.2"
typetag = "0.1.7"
dyn-clone = "1.0.4"


[dev-dependencies]
hex-literal = "0.2.1"
