[package]
name = "redis-transforms"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full", "macros"] }
tokio-util = { version = "0.6.1", features = ["full"]}
tokio-stream = "0.1.2"
bytes = "1.0.0"
futures = "0.3.12"
futures-core = "0.3.1"
serde = { version = "1.0.111", features = ["derive"] }
async-trait = "0.1.30"
anyhow = "1.0.31"
typetag = "0.1.7"
dyn-clone = "1.0.4"


shotover-proxy = {path = "../"}