[package]
name = "shotover-redis-transforms"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.2", features = ["full", "macros"] }
tokio-util = { version = "0.6.1", features = ["full"]}
tokio-stream = "0.1.2"
bytes = "1.0.0"
futures = "0.3.12"
futures-core = "0.3.1"
serde = { version = "1.0.111", features = ["derive"] }
async-trait = "0.1.30"
anyhow = "1.0.31"
typetag = "0.1.7"
dyn-clone = "1.0.4"
rand = { version = "0.7.3", features = ["small_rng", "std"]}
tracing = { version = "0.1.15", features = ["release_max_level_info"]}
itertools = "0.9.0"
crc16 = { version = "0.4.0"}




shotover-protocols = { path = "../shotover_protocols" }
shotover-transforms = { path = "../shotover_transforms" }