[package]
name = "shotover-scripts"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#lua
mlua = { version = "0.4.1", features = ["async","send", "vendored","lua53"] }
mlua_serde = { version = "0.5", features = ["lua53"] }

#wasm
wasmer-runtime = "0.17.1"
tokio = { version = "1.0.2", features = ["full", "macros"] }
anyhow = "1.0.31"
serde = { version = "1.0.111", features = ["derive"] }
bincode = "1.3.1"
typetag = "0.1.7"
dyn-clone = "1.0.4"
