[package]
name = "shotover-transforms"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.0"
async-trait = "0.1.30"
anyhow = "1.0.31"
serde = { version = "1.0.111", features = ["derive"] }
redis-protocol = { git = "https://github.com/benbromhead/redis-protocol.rs", branch = "remove-parser" }
cassandra-proto = { git = "https://github.com/benbromhead/cassandra-proto", branch = "move-to-bytes", features = ["v4"]}
sqlparser = "= 0.5.0"
serde_json = "1.0"
chrono = {version = "0.4.10",  features = ["serde"]}
itertools = "0.9.0"
#tracing = { version = "0.1.15", features = ["release_max_level_info"]}
byteorder = "1.3.2"
typetag = "0.1.7"
dyn-clone = "1.0.4"
tokio = { version = "1.0.2", features = ["sync", "time", "net", "macros"] }
metrics = "0.12.1"
futures = "0.3.12"
tokio-stream = "0.1.2"
tokio-util = { version = "0.6.1", features = ["full"]}
tracing = { version = "0.1.15", features = ["release_max_level_info"]}
halfbrown = "0.1.11"
pin-project-lite = "0.2"
futures-core = "0.3.1"
