[package]
name = "shotover-util-transforms"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
bytes = "1.0.0"
async-trait = "0.1.30"
tracing = { version = "0.1.15", features = ["release_max_level_info"]}
typetag = "0.1.7"
dyn-clone = "1.0.4"
tokio = { version = "1.0.2", features = ["full", "macros"] }
rand = { version = "0.7.3", features = ["small_rng", "std"]}
rand_distr = "0.2.2"
metrics = "0.12.1"
itertools = "0.9.0"
rdkafka = { version = "0.24", features = ["cmake-build"] }

serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0"

shotover-transforms = { path = "../shotover_transforms" }