[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cassandra-cpp-driver-tests = ["cassandra-cpp"]
kafka-cpp-driver-tests = ["rdkafka"]

[dependencies]
tracing.workspace = true
subprocess.workspace = true
tokio-bin-process.workspace = true
cdrs-tokio.workspace = true
cassandra-protocol.workspace = true
cassandra-cpp = { version = "3.0.0", default-features = false, features = ["log"], optional = true }
scylla.workspace = true
openssl.workspace = true
bytes.workspace = true
ordered-float.workspace = true
tokio.workspace = true
uuid.workspace = true
redis.workspace = true
tokio-io-timeout = "1.1.1"
tokio-openssl.workspace = true
itertools.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rcgen.workspace = true
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
docker-compose-runner = "0.3.0"
j4rs = "0.21.0"
futures-util = "0.3.28"
http = "1.1.0"
rustls = { version = "0.23.2", default-features = false }
rustls-pki-types = "1.0.1"
rustls-pemfile = "2.0.0"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
pretty_assertions.workspace = true
serde.workspace = true
