[package]
name = "test-helpers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cassandra-cpp-driver-tests = ["cassandra-cpp"]
kafka-cpp-driver-tests = ["rdkafka"]

[dependencies]
tracing.workspace = true
subprocess.workspace = true
tokio-bin-process.workspace = true
cdrs-tokio.workspace = true
cassandra-protocol.workspace = true
cassandra-cpp = { version = "3.0.2", default-features = false, features = [
    "log",
], optional = true }
scylla.workspace = true
openssl.workspace = true
bytes.workspace = true
ordered-float.workspace = true
tokio.workspace = true
uuid.workspace = true
redis.workspace = true
itertools.workspace = true
reqwest.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rcgen.workspace = true
rdkafka = { version = "0.37", features = ["cmake-build"], optional = true }
docker-compose-runner = "0.3.1"
j4rs = "0.22.0"
futures-util = "0.3.31"
http = "1.3.1"
rustls = { version = "0.23.28", default-features = false, features = [
    "aws_lc_rs",
] }
rustls-pki-types = "1.12.0"
rustls-pemfile = "2.2.0"
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-native-roots",
] }
pretty_assertions.workspace = true
serde.workspace = true
