[package]
name = "tokio-bin-process"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.15"
tracing-subscriber = { version = "0.3.1", features = ["env-filter", "json"] }
subprocess = "0.2.7"
anyhow = "1.0.42"
nix = "0.26.0"
rcgen = "0.10.0"
tokio = { version = "1.21.1", features = ["full", "macros"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.89"
nu-ansi-term = "0.46.0"
itertools = "0.10.1"
once_cell = "1.16.0"
