[package]
name = "tokio-bin-process"
version = "0.1.0"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
subprocess.workspace = true
anyhow.workspace = true
nix.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
nu-ansi-term = "0.46.0"
itertools.workspace = true
once_cell = "1.17.1"
